--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.amin_amini'
+group = 'com.github.amin-amini'
 
 android {
     compileSdkVersion 27
